test/errors/invalid_string_char.sg
' Test invalid escape in string
(:= test "valid\qinvalid")